--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             <i class="fas fa-check-circle"></i>
             <p style="display: inline;">Retur i butikk</p>
           </div> <!--Jeg hadde brukt <p> for å skrive tekst inni nettsiden-->
-            <p>Sikker Belastning</p>
+        <div>
+            <i class="fas fa-shoe-prints"></i>
+            <p style="display: inline;">Sikker Belastning</p>
+         </div>
+              
         <a href="konto.html">Login</a> <!--Der brukte jeg a-href funksjon til å åpne konto.html filen for login knapp-->
     </header> 
     <main>
