--- a/konto.html
+++ b/konto.html
@@ -9,8 +9,10 @@
             <i class="fas fa-check-circle"></i>
             <p style="display: inline;">Retur i butikk</p>
           </div>
-        <p>Sikker Belastning</p>
-
+        <div>
+            <i class="fas fa-shoe-prints"></i>
+            <p style="display: inline;">Sikker Belastning</p>
+         </div>
         <a href="index.html">Hjem </a> <br>
         <i class="fa fa-search" aria-hidden="true"></i>
         <input type="search" name="query" placeholder="Search...">
