--- a/product.html
+++ b/product.html
@@ -13,7 +13,10 @@
         <i class="fas fa-check-circle"></i>
         <p style="display: inline;">Retur i butikk</p>
       </div>
-      <p>Sikker Belastning</p>
+      <div>
+        <i class="fas fa-shoe-prints"></i>
+        <p style="display: inline;">Sikker Belastning</p>
+     </div>
       <a href="product.html">login </a> <br>
       <a href="index.html">Hjem </a> <br>
       <i class="fa fa-search" aria-hidden="true"></i>
